create page loading data

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,11 @@
         transform: rotate(360deg);
     }
 }
+
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
