--- a/src/components/Role/Role.scss
+++ b/src/components/Role/Role.scss
@@ -16,4 +16,11 @@
             color: red;
         }
     }
+
+    .table-role {
+        .delete {
+            cursor: pointer;
+            color: red;
+        }
+    }
 }
